--- a/Beitragsordnung-markiert.tex
+++ b/Beitragsordnung-markiert.tex
@@ -4,6 +4,7 @@
 \usepackage[ngerman]{babel}
 \usepackage{textcomp}  % für Euro-Symbol
 \usepackage[legal]{labdoc}
+\usepackage{xcolor}
 
 \title{Beitragsordnung des Freies~Labor~e.~V.}
 \date{Entwurf \today}
@@ -16,14 +17,15 @@
   \item Der reguläre Mitgliedsbeitrag für ordentliche Mitglieder beträgt 20€
     pro Monat. Fördermitglieder zahlen einen frei wählbaren Beitrag von
     mindestens 30€ pro Jahr.
-  \item Schülerinnen/Schüler, Studierende, Auszubildende, 
+  \item Schülerinnen und Schüler, Studierende, Auszubildende, 
     Empfängerinnen/Empfänger von Sozialgeld oder Arbeitslosengeld~II 
-    einschließlich Leistungen nach §~22 ohne Zuschläge oder nach §~24 des 
-    Zweiten Buchs des Sozialgesetzbuchs (SGB~II), sowie Empfängerinnen/Empfänger
-    von Ausbildungsförderung nach dem Bundesausbildungsförderungsgesetz (BAföG)
-    haben die Möglichkeit, für die ordentliche Mitgliedschaft einen ermäßigten
-    Beitrag von 10€ pro Monat zu zahlen. Ein entsprechender Nachweis muss dem
-    Vorstand auf Verlangen zugänglich gemacht werden.
+    einschließlich Leistungen nach §~22 ohne Zuschläge oder nach §~24 des
+    Zweiten Buchs des Sozialgesetzbuchs (SGB~II), sowie Empfängerinnen und 
+    Empfänger von Ausbildungsförderung nach dem
+    Bundesausbildungsförderungsgesetz (BAföG) haben die Möglichkeit, für die
+    ordentliche Mitgliedschaft einen ermäßigten Beitrag von 
+    \colorbox{yellow}{10€} pro Monat zu zahlen. Ein entsprechender Nachweis muss
+    dem Vorstand auf Verlangen zugänglich gemacht werden.
   \item Sollte ein ordentliches Mitglied aus finanziellen Gründen den
     Mitgliedsbeitrag nicht aufbringen können, kann dieses beim Vorstand einen
     Antrag auf Ermäßigung oder Befreiung stellen. Diese gilt für maximal ein
@@ -63,9 +65,10 @@
 
 \section{Erstattungen}
 \begin{enumerate}
-  \item Im Voraus gezahlte Mitgliedsbeiträge für noch nicht laufende Monate
-    werden dem Mitglied bei Beendigung der Mitgliedschaft erstattet. Auf Wunsch
-    kann dieser Betrag an den Verein gespendet werden.
+  \item \colorbox{yellow}{Im Voraus gezahlte Mitgliedsbeiträge für noch nicht 
+    laufende Monate werden}\\\colorbox{yellow}{dem Mitglied bei Beendigung der
+    Mitgliedschaft erstattet. Auf Wunsch kann}\\\colorbox{yellow}{dieser Betrag 
+    an den Verein gespendet werden.}
 \end{enumerate}
 \end{document}
 % vim: set tw=80 et sw=2 ts=2:
