--- a/Mitgliedsantrag.tex
+++ b/Mitgliedsantrag.tex
@@ -4,7 +4,6 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp} % für €
 \usepackage{tabularx}
-\usepackage{libertine} % kann man notfalls auch ignorieren, wenns nicht da ist
 \usepackage{wasysym} % für \Square
 \usepackage{multirow}
 \usepackage{wrapfig}
@@ -32,20 +31,11 @@
 \sbox{\headerboxaddress}{
   \parbox{.4\textwidth}{
     \small
-    Vorstand des Stratum~0~e.\,V. \\
-    Hamburger Straße 273a \\
-    38114 Braunschweig \\
-    vorstand@stratum0.org \\
-    Fax: (0531) 287 69 246
+    Vorstand des Freies~Labor~e.\,V. \\
+    vorstand@freieslabor.org
   }
 }
 \newsavebox{\headerboxlogo}
-\sbox{\headerboxlogo}{
-  \parbox{.4\textwidth}{
-    \hfill % damit rechtsbündig klappt
-    \includegraphics[height=52pt]{stratum0-logo.eps}
-  }
-}
 \begin{center}
 \begin{tabular}{@{}p{0.4\textwidth}@{\phantom{m}}p{0.4\textwidth}}
   \multicolumn{1}{r}{
@@ -63,10 +53,10 @@
   \vspace{0.5\baselineskip}
 \end{center}
 
-\hinweis{Mitgliedsanträge können auch formlos per E-Mail oder Fax gestellt
+\hinweis{Mitgliedsanträge können auch formlos per E-Mail gestellt
 werden, unter Angabe der hier aufgeführten Daten. Wir nehmen auch gerne
 PGP-signierte oder -verschlüsselte Mails entgegen, unsere PGP-Schlüssel sind
-unter {\upshape\url{https://stratum0.org/vorstand}} zu finden.}
+unter {\upshape\url{???}} zu finden.}
 
 \hinweis{Sobald der Vorstand über deinen Antrag entschieden hat, bekommst du per
 E-Mail Nachricht über deine Aufnahme.}
@@ -86,10 +76,10 @@ E-Mail-Adresse: \hrulefill \signskip
 \minisec{Ordentliche Mitgliedschaft}
 \begin{description}
   \item[\Square] Ich möchte den vollen Beitrag von \textbf{20€ pro Monat} zahlen.
-  \item[\Square] Ich möchte den ermäßigten Beitrag von \textbf{12€ pro Monat}
+  \item[\Square] Ich möchte den ermäßigten Beitrag von \textbf{10€ pro Monat}
     nach §0,~Abs.~2 der Beitragsordnung zahlen. (Ein entsprechender Nachweis
     muss dem Vorstand auf Verlangen zugänglich gemacht werden.)
-  \item[\Square] Ich beantrage aus finanziellen Gründen nach §0,~Abs.~3 der
+  \item[\Square] Ich beantrage aus finanziellen Gründen nach §1,~Abs.~3 der
     Beitragsordnung eine individuelle Ermäßigung oder Befreiung. Diese gilt für
     ein Jahr und kann auf Antrag erneuert werden. \\
     \Square~Befreiung \hfill
@@ -100,9 +90,7 @@ E-Mail-Adresse: \hrulefill \signskip
 \begin{description}
   \item[\Square] Ich möchte Fördermitglied werden und einen frei wählbaren
     Beitrag von mindestens 30€ pro Jahr zahlen. \\
-    Jährlicher Mitgliedsbeitrag:\quad \Square~64\,€\quad \Square~128\,€\quad
-      \Square~256\,€\quad \Square~512\,€\quad \Square~1024\,€\quad
-      \Square~\hrulefill\signskip\,€
+    Jährlicher Mitgliedsbeitrag: \hrulefill\signskip~€\hfill\phantom{a}
 \end{description}
 Datum, Unterschrift Mitglied: \hrulefill\smallsignskip
 
