--- a/Satzung-markiert.tex
+++ b/Satzung-markiert.tex
@@ -3,6 +3,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage[legal]{labdoc}
+\usepackage{todonotes}
+\usepackage{xcolor}
 
 \title{Satzung des Freies~Labor~e.~V.}
 \date{Entwurf \today}
@@ -13,9 +15,9 @@
 
 \section{Name, Sitz, Geschäftsjahr}
 \begin{enumerate}
-  \item Der Verein trägt den Namen Freies~Labor~e.~V.
-  \item Er hat seinen Sitz in Hildesheim und wird dort in das Vereinsregister
-    eingetragen.
+  \item Der Verein trägt den Namen \colorbox{yellow}{Freies~Labor}~e.~V.
+  \item Er hat seinen Sitz in \colorbox{yellow}{Hildesheim} und wird dort in das
+    Vereinsregister eingetragen.
   \item Das Geschäftsjahr ist das Kalenderjahr.
 \end{enumerate}
 
@@ -25,16 +27,17 @@
   \item Der Verein setzt sich zum Zweck:
     \begin{itemize}
       \item
-         die Förderung der Erziehung und Volksbildung, insbesondere der
+         die Förderung der Erziehung und Volksbildung, insbesondere der 
          Informatik- und Medienkompetenz der breiten Öffentlichkeit, sowie
-         Aufklärung über und kritische Betrachtung von Risiken und
-         Möglichkeiten neuer Technologien
+         Aufklärung über und kritische Betrachtung von Risiken und Möglichkeiten
+         neuer Technologien
       \item Kunst und Kultur in Hinblick auf den schöpferischen Umgang mit
         Technologie zu fördern
       \item Kriminalprävention zu leisten, insbesondere im Umgang mit digitaler
         Informationsverarbeitungstechnik durch Aufklärung über rechtliche
         Grundsätze, angemessene Verhaltensweisen und Unterbreitung von
         Alternativen zu kriminellen Handlungsweisen
+        \todo{Vielleicht lieber durch etwas anderes ersetzen/\\rausnehmen?}
     \end{itemize}
   \item Der Vereinszweck soll insbesondere verwirklicht werden durch:
     \begin{itemize}
@@ -42,15 +45,15 @@
         Verwirklichung der Vereinszwecke nötigen Infrastruktur
       \item die Organisation und Durchführung von lokalen Zusammenkünften und
         Informationsveranstaltungen sowie Öffentlichkeitsarbeit
-      \item die Zusammenarbeit und der Austausch mit nationalen und
-        internationalen Gruppierungen, deren Ziele mit denen des Vereins
+      \item die Zusammenarbeit und der Austausch mit nationalen und 
+        internationalen Gruppierungen, deren Ziele mit denen des Vereins 
         vereinbar sind
     \end{itemize}
 \end{enumerate}
 
 \section{Selbstlosigkeit und Gemeinnützigkeit}
 \begin{enumerate}
-  \item Der Verein ist selbstlos tätig; er verfolgt ausschließlich und
+  \item Der Verein ist selbstlos tätig; er verfolgt ausschließlich und 
     unmittelbar gemeinnützige Zwecke im Sinne des Abschnitts "`steuerbegünstigte
     Zwecke"' der Abgabenordnung und ist nicht auf eigenwirtschaftliche Zwecke
     ausgerichtet.
@@ -89,6 +92,7 @@
     werden. Dem Mitglied muss vor der Beschlussfassung Gelegenheit zur
     Stellungnahme gegeben werden. Der Vorstand muss dem auszuschließenden
     Mitglied den Beschluss in Textform unter Angabe von Gründen mitteilen. 
+    \todo{Absatz eingefügt}
   \item Gegen den Ausschließungsbeschluss oder die Nichtaufnahme kann innerhalb 
     einer Frist von 21~Tagen nach Mitteilung des Ausschlusses Berufung eingelegt
     werden, über den die nächste Mitgliederversammlung entscheidet. Bis zum 
@@ -114,9 +118,9 @@
 \begin{enumerate}
   \item Die Mitgliederversammlung ist mindestens einmal jährlich einzuberufen.
   \item Eine Mitgliederversammlung ist außerdem einzuberufen, wenn es das
-    Vereinsinteresse erfordert, oder wenn die Einberufung von mindestens 10\%
-    der Vereinsmitglieder in Textform und unter Angabe des Zweckes und der
-    Gründe verlangt wird.
+    Vereinsinteresse erfordert, oder wenn die Einberufung von mindestens 
+    \colorbox{yellow}{10\%} der Vereinsmitglieder in Textform und unter Angabe 
+    des Zweckes und der Gründe verlangt wird.
   \item Die Einberufung der Mitgliederversammlung erfolgt in Textform durch den
     Vorstand unter Wahrung einer Einladungsfrist von mindestens 2~Wochen bei
     gleichzeitiger Bekanntgabe einer vorläufigen Tagesordnung. Die Frist beginnt
@@ -138,27 +142,28 @@
       \item Aufgaben des Vereins
       \item An- und Verkauf sowie Belastung von Grundbesitz
       \item Beteiligung an Gesellschaften
-      \item Aufnahme von Darlehen
+      \item \colorbox{yellow}{Aufnahme von Darlehen} \todo{Darlehen, die die 
+        Summe der monatlichen Mitgliedsbeiträge nicht übersteigen ohne 
+        Mitgliederversammlung zulassen?}
       \item Beschluss der Beitragsordnung
       \item Satzungsänderungen
       \item Auflösung des Vereins
     \end{itemize}
   \item Die Mitgliederversammlung gibt sich bei Bedarf eine Geschäftsordnung.
   \item Jede satzungsmäßig einberufene Mitgliederversammlung wird als
-    beschlussfähig anerkannt, sofern mindestens 25\% der Mitglieder anwesend
-    sind. Falls dieser geforderte Anteil nicht erreicht wird, ist die darauf
-    folgende Mitgliederversammlung unabhängig von der Anzahl der erschienen
-    Mitglieder beschlussfähig. Auf diesen Umstand muss in der Einladung zur
-    Mitgliederversammlung besonders hingewiesen werden. Jedes ordentliche
-    Mitglied hat eine Stimme. Fördermitglieder sind berechtigt, an den
-    Versammlungen ohne Stimmrecht teilzunehmen.
+    beschlussfähig anerkannt, sofern mindestens \colorbox{yellow}{25\%} der 
+    Mitglieder anwesend sind. Falls dieser geforderte Anteil nicht erreicht 
+    wird, ist die darauf folgende Mitgliederversammlung unabhängig von der 
+    Anzahl der erschienen Mitglieder beschlussfähig. Auf diesen Umstand muss in 
+    der Einladung zur Mitgliederversammlung besonders hingewiesen werden. Jedes 
+    ordentliche Mitglied hat eine Stimme. Fördermitglieder sind berechtigt, an 
+    den Versammlungen ohne Stimmrecht teilzunehmen.
   \item Die Mitgliederversammlung fasst ihre Beschlüsse mit einfacher Mehrheit
     der anwesenden Mitglieder, sofern in dieser Satzung nicht anders geregelt.
     Bei Stimmengleichheit gilt ein Antrag als abgelehnt.
   \item Die Ausübung des Stimmrechts auf der Mitgliederversammlung ist nur 
-    möglich, wenn bis zum Zeitpunkt der Inanspruchnahme des e.~g. Rechts
-    alle offenen Mitgliedsbeiträge des entsprechenden Mitglieds beglichen
-    wurden.
+    möglich, wenn bis zum Zeitpunkt der Inanspruchnahme des e.~g. Rechts alle
+    offenen Mitgliedsbeiträge des entsprechenden Mitglieds beglichen wurden.
 \end{enumerate}
 
 \section{Der Vorstand}
@@ -166,19 +171,20 @@
   \item Der Vorstand besteht aus mindestens 3~Mitgliedern: der/dem
     Vorstandsvorsitzenden, der/dem stellvertretenden Vorsitzenden, dem 
     Schatzmeister/der Schatzmeisterin und bis zu 3~Beisitzerinnen und 
-    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Je zwei
-    Vorstandsmitglieder, ausgenommen die Beisitzerinnen/Beisitzer, sind
+    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Je zwei 
+    Vorstandsmitglieder, ausgenommen die Beisitzerinnen/Beisitzer, sind 
     gemeinsam vertretungsberechtigt.
   \item Der Vorstand wird von der Mitgliederversammlung für die Dauer von einem
     Jahr gewählt. Es kann durch Beschluss der Mitgliederversammlung auf eine
     Wahl der Beisitzerinnen/Beisitzer verzichtet werden. Die Bestätigung des 
-    Vorstandes oder die Wiederwahl der Vorstandsmitglieder ist möglich. Die
-    jeweils amtierenden Vorstandsmitglieder bleiben im Amt, bis Nachfolger
+    Vorstandes oder die Wiederwahl der Vorstandsmitglieder ist möglich. Die 
+    jeweils amtierenden Vorstandsmitglieder bleiben im Amt, bis Nachfolger 
     gewählt sind.
   \item Dem Vorstand obliegt die Führung der laufenden Geschäfte des Vereins. Er
     hat insbesondere folgende Rechte:
     \begin{itemize}
       \item Gremien benennen und ihnen Mittel und Zuständigkeiten zuweisen
+      \todo{Bestellen von GeschäftsführerIn nötig?}
     \end{itemize}
   \item Vorstandssitzungen finden mindestens vierteljährlich statt.
   \item Mitglieder sind grundsätzlich berechtigt, an Vorstandssitzungen ohne
@@ -195,24 +201,24 @@
     Mitglieder des Vorstandes anwesend sind. Der Vorstand fasst seine Beschlüsse
     mit einfacher Mehrheit der Vorstandsmitglieder.
   \item Dringende Beschlüsse des Vorstands können auch in Textform oder
-    fernmündlich im Umlauf gefasst werden. Der Umlaufbeschluss 
-    wird abgebrochen, sobald ein Vorstandsmitglied der Dringlichkeit
-    widerspricht. Dringende Beschlüsse müssen auf der nächstfolgenden regulären
-    Vorstandssitzung bestätigt werden. 
+    fernmündlich im Umlauf gefasst werden. \colorbox{yellow}{Der Umlaufbeschluss 
+    wird abgebrochen, sobald ein}\\\colorbox{yellow}{Vorstandsmitglied der 
+    Dringlichkeit widerspricht.} Dringende Beschlüsse müssen auf der 
+    nächstfolgenden regulären Vorstandssitzung bestätigt werden. 
   \item Ist die Anzahl der Vorstandsmitglieder z.~B. durch Rücktritt auf unter 3
     gesunken, ist der restliche Vorstand verpflichtet, unverzüglich, spätestens
     jedoch innerhalb von 14~Tagen, zu einer zeitnahen Mitgliederversammlung
     einzuladen.
   \item Für vakant gewordene Vorstandsposten wird auf der nächsten
     Mitgliederversammlung jeweils eine Nachfolgerin/ein Nachfolger bestimmt, 
-    die/der für die restliche Dauer der Amtszeit seiner Vorgängerin/seines
-    Vorgängers im Amt bleibt. Bei vakant gewordenen Posten von Beisitzerinnen
+    die/der für die restliche Dauer der Amtszeit seiner Vorgängerin/seines 
+    Vorgängers im Amt bleibt. Bei vakant gewordenen Posten von Beisitzerinnen 
     und Beisitzern kann eine Nachfolgerin/ein Nachfolger nach Beschluss der 
-    Mitgliederversammlung entfallen.
+    Mitgliederversammlung entfallen. 
   \item Der Vorstand gibt sich eine Geschäftsordnung, worin unter anderem die
     Aufgabenteilung des Vorstandes geregelt wird.
-  \item Der Vorstand soll sich an den Beschlüssen der regelmäßigen 
-    Plenumssitzungender Mitglieder orientieren.
+  \item \colorbox{yellow}{Der Vorstand soll sich an den Beschlüssen der 
+  regelmäßigen Plenumssitzungen}\\\colorbox{yellow}{der Mitglieder orientieren.}
 \end{enumerate}
 
 \section{Satzungsänderung}
@@ -248,8 +254,8 @@
     Mitgliederversammlung gefasst werden.
   \item Bei Auflösung oder Aufhebung des Vereins, des Verlustes seiner
     Rechtsfähigkeit oder bei Wegfall seines steuerbegünstigten Zweckes fällt
-    das Vermögen des Vereins nach Erfüllung sämtlicher Verpflichtungen an
-    eine durch die letzte Mitgliederversammlung bestimmte steuerbegünstigte
+    das Vermögen des Vereins nach Erfüllung sämtlicher Verpflichtungen an eine
+    durch die letzte Mitgliederversammlung bestimmte steuerbegünstigte
     Körperschaft, die es unmittelbar und ausschließlich für gemeinnützige
     Zwecke im Sinne des §2 zu verwenden hat.
 \end{enumerate}
