--- a/labdoc.sty
+++ b/labdoc.sty
@@ -1,8 +1,8 @@
-%% stratum0doc.sty
+%% labdoc.sty
 %%
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
 
-\ProvidesPackage{stratum0doc}
+\ProvidesPackage{labdoc}
 \RequirePackage{tocloft}
 
 %% Package options
@@ -44,7 +44,6 @@
 \renewcommand*{\thesection}{%
   \@sndsectionmark\theoldsection
 }
-\setcounter{section}{-1} % Hacker fangen ab 0 an zu zählen.
 \makeatother
 
 % paragraph skips and indents
