Paragraph Beitragsordnung korrigiert + gegendert

--- a/Mitgliedsantrag.tex
+++ b/Mitgliedsantrag.tex
@@ -54,9 +54,7 @@
 \end{center}
 
 \hinweis{Mitgliedsanträge können auch formlos per E-Mail gestellt
-werden, unter Angabe der hier aufgeführten Daten. Wir nehmen auch gerne
-PGP-signierte oder -verschlüsselte Mails entgegen, unsere PGP-Schlüssel sind
-unter {\upshape\url{???}} zu finden.}
+werden, unter Angabe der hier aufgeführten Daten.}
 
 \hinweis{Sobald der Vorstand über deinen Antrag entschieden hat, bekommst du per
 E-Mail Nachricht über deine Aufnahme.}
@@ -77,7 +75,7 @@ E-Mail-Adresse: \hrulefill \signskip
 \begin{description}
   \item[\Square] Ich möchte den vollen Beitrag von \textbf{20€ pro Monat} zahlen.
   \item[\Square] Ich möchte den ermäßigten Beitrag von \textbf{10€ pro Monat}
-    nach §0,~Abs.~2 der Beitragsordnung zahlen. (Ein entsprechender Nachweis
+    nach §1,~Abs.~2 der Beitragsordnung zahlen. (Ein entsprechender Nachweis
     muss dem Vorstand auf Verlangen zugänglich gemacht werden.)
   \item[\Square] Ich beantrage aus finanziellen Gründen nach §1,~Abs.~3 der
     Beitragsordnung eine individuelle Ermäßigung oder Befreiung. Diese gilt für
@@ -95,11 +93,11 @@ E-Mail-Adresse: \hrulefill \signskip
 Datum, Unterschrift Mitglied: \hrulefill\smallsignskip
 
 % Gesetzlicher Vertreter
-\section*{Gesetzlicher Vertreter}
-\hinweis{Dieser Abschnitt ist nur für minderjährige Antragsteller nötig.}
+\section*{GesetzlicheR VertreterIn}
+\hinweis{Dieser Abschnitt ist nur für minderjährige AntragstellerInnen nötig.}
 
 Name: \hrulefill \signskip \\
-Datum, Unterschrift Vertreter: \hrulefill \signskip
+Datum, Unterschrift VertreterIn: \hrulefill \signskip
 
 \end{document}
 % vim: set tw=80 et sw=2 ts=2:
