Änderungen im Rahmen der Gründung

--- a/Beitragsordnung.tex
+++ b/Beitragsordnung.tex
@@ -6,7 +6,7 @@
 \usepackage[legal]{labdoc}
 
 \title{Beitragsordnung des Freies~Labor~e.~V.}
-\date{Entwurf \today}
+\date{25.~Januar~2014}
 
 \begin{document}
 \maketitle
@@ -64,8 +64,10 @@
 \section{Erstattungen}
 \begin{enumerate}
   \item Im Voraus gezahlte Mitgliedsbeiträge für noch nicht laufende Monate
-    werden dem Mitglied bei Beendigung der Mitgliedschaft erstattet. Auf Wunsch
-    kann dieser Betrag an den Verein gespendet werden.
+    werden dem Mitglied auf Wunsch bei Beendigung der Mitgliedschaft erstattet.
+	Antrag zur Erstattung muss innerhalb von 6~Wochen nach Beendigung der
+	Mitgliedschaft erfolgen.
 \end{enumerate}
+
 \end{document}
 % vim: set tw=80 et sw=2 ts=2:
