Formale Änderung §8.1 (Vertretungsberechtigung)

--- a/Satzung.tex
+++ b/Satzung.tex
@@ -5,7 +5,7 @@
 \usepackage[legal]{labdoc}
 
 \title{Satzung des Freies~Labor~e.~V.}
-\date{Entwurf \today}
+\date{02.03.2014}
 
 \begin{document}
 \maketitle
@@ -166,9 +166,9 @@
   \item Der Vorstand besteht aus mindestens 3~Mitgliedern: der/dem
     Vorstandsvorsitzenden, der/dem stellvertretenden Vorsitzenden, dem 
     Schatzmeister/der Schatzmeisterin und bis zu 3~Beisitzerinnen und 
-    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Je zwei
-    Vorstandsmitglieder, ausgenommen die Beisitzerinnen/Beisitzer, sind
-    gemeinsam vertretungsberechtigt.
+    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Die 
+    Beisitzerinnen und Beisitzer ausgeschlossen, sind 2 der verbleibenden 3 
+    Vorstandsmitglieder vertretungsberechtigt.
   \item Der Vorstand wird von der Mitgliederversammlung für die Dauer von einem
     Jahr gewählt. Es kann durch Beschluss der Mitgliederversammlung auf eine
     Wahl der Beisitzerinnen/Beisitzer verzichtet werden. Die Bestätigung des 
