Ohne Ausschluss der Beisitzer

--- a/Satzung.tex
+++ b/Satzung.tex
@@ -162,9 +162,9 @@
   \item Der Vorstand besteht aus mindestens 3~Mitgliedern: der/dem
     Vorstandsvorsitzenden, der/dem stellvertretenden Vorsitzenden, dem 
     Schatzmeister/der Schatzmeisterin und bis zu 3~Beisitzerinnen und 
-    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Die 
-    Beisitzerinnen und Beisitzer ausgeschlossen, sind 2 der verbleibenden 3 
-    Vorstandsmitglieder vertretungsberechtigt.
+    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. 
+	Der Vorstandsvorsitzende und ein weiteres  
+    Vorstandsmitglied sind nach außen vertretungsberechtigt.
   \item Der Vorstand wird von der Mitgliederversammlung für die Dauer von einem
     Jahr gewählt. Es kann durch Beschluss der Mitgliederversammlung auf eine
     Wahl der Beisitzerinnen/Beisitzer verzichtet werden. Die Bestätigung des 
