--- a/Satzung.tex
+++ b/Satzung.tex
@@ -62,7 +62,7 @@
 \begin{enumerate}
   \item Jede natürliche oder juristische Person kann Mitglied des Vereins
     werden. Bei Minderjährigen ist die Zustimmung der gesetzlichen Vertreterin/
-	des gesetzlichen Vertreters erforderlich.
+    des gesetzlichen Vertreters erforderlich.
   \item Die Mitgliedschaft im Verein ist auf zwei Arten möglich:
     \begin{itemize}
       \item Ordentliche Mitglieder gestalten das Vereinsleben durch ihre aktive
@@ -183,10 +183,9 @@
     Mitglieder zu behandeln. Der Grund für den Ausschluss der Mitglieder muss im
     Protokoll festgehalten werden.
   \item Die Einladung zu Vorstandssitzungen erfolgt durch ein Mitglied des
-    /Vorstands in Textform
-    unter Einhaltung einer Einladungsfrist von mindestens 7~Tagen. Die Einladung
-    muss außerdem an geeigneter Stelle für alle Mitglieder des Vereins
-    veröffentlicht werden.
+    Vorstands in Textform unter Einhaltung einer Einladungsfrist von mindestens
+    7~Tagen. Die Einladung muss außerdem an geeigneter Stelle für alle Mitglieder
+    des Vereins veröffentlicht werden.
   \item Vorstandssitzungen sind beschlussfähig, wenn mindestens zwei Drittel der
     Mitglieder des Vorstandes anwesend sind. Der Vorstand fasst seine Beschlüsse
     mit einfacher Mehrheit der Vorstandsmitglieder.
