Ausschluss der Beisitzenden

--- a/Satzung.tex
+++ b/Satzung.tex
@@ -159,18 +159,14 @@
 
 \section{Der Vorstand}
 \begin{enumerate}
-  \item Der Vorstand besteht aus mindestens 3~Mitgliedern: der/dem
-    Vorstandsvorsitzenden, der/dem stellvertretenden Vorsitzenden, dem 
-    Schatzmeister/der Schatzmeisterin und bis zu 3~Beisitzerinnen und 
-    Beisitzern. Er vertritt den Verein gerichtlich und außergerichtlich. Die 
-    Beisitzerinnen und Beisitzer ausgeschlossen, sind 2 der verbleibenden 3 
-    Vorstandsmitglieder vertretungsberechtigt.
+  \item Der Vorstand besteht aus 3~Mitgliedern: der/dem Vorstandsvorsitzenden,
+    der/dem stellvertretenden Vorsitzenden und der Schatzmeisterin/dem
+    Schatzmeister. Er vertritt den Verein gerichtlich und außergerichtlich. 2
+    der 3 Vorstandsmitglieder sind vertretungsberechtigt.
   \item Der Vorstand wird von der Mitgliederversammlung für die Dauer von einem
-    Jahr gewählt. Es kann durch Beschluss der Mitgliederversammlung auf eine
-    Wahl der Beisitzerinnen/Beisitzer verzichtet werden. Die Bestätigung des 
-    Vorstandes oder die Wiederwahl der Vorstandsmitglieder ist möglich. Die
-    jeweils amtierenden Vorstandsmitglieder bleiben im Amt, bis Nachfolger
-    gewählt sind.
+    Jahr gewählt. Die Bestätigung des Vorstandes oder die Wiederwahl der
+    Vorstandsmitglieder ist möglich. Die jeweils amtierenden Vorstandsmitglieder
+    bleiben im Amt, bis Nachfolger gewählt sind.
   \item Dem Vorstand obliegt die Führung der laufenden Geschäfte des Vereins. Er
     hat insbesondere folgende Rechte:
     \begin{itemize}
@@ -201,9 +197,7 @@
   \item Für vakant gewordene Vorstandsposten wird auf der nächsten
     Mitgliederversammlung jeweils eine Nachfolgerin/ein Nachfolger bestimmt, 
     die/der für die restliche Dauer der Amtszeit seiner Vorgängerin/seines
-    Vorgängers im Amt bleibt. Bei vakant gewordenen Posten von Beisitzerinnen
-    und Beisitzern kann eine Nachfolgerin/ein Nachfolger nach Beschluss der 
-    Mitgliederversammlung entfallen.
+    Vorgängers im Amt bleibt.
   \item Der Vorstand gibt sich eine Geschäftsordnung, worin unter anderem die
     Aufgabenteilung des Vorstandes geregelt wird.
   \item Der Vorstand soll sich an den Beschlüssen der regelmäßigen 
