Satzungsänderung "§5 Beiträge" einstimmig auf der MV (05.06.2014) beschlossen.

--- a/Satzung.tex
+++ b/Satzung.tex
@@ -5,7 +5,7 @@
 \usepackage[legal]{labdoc}
 
 \title{Satzung des Freies~Labor~e.~V.}
-\date{02.~März 2014}
+\date{05.~Juni 2014}
 
 \begin{document}
 \maketitle
@@ -93,8 +93,9 @@
 
 \section{Beiträge}
 \begin{enumerate}
-  \item Für die Regelung der Beiträge beschließt die Mitgliederversammlung eine
-    Beitragsordnung.
+  \item Es werden Mitgliedsbeiträge erhoben.
+  \item Details regelt eine Beitragsordnung, die die Mitgliederversammlung
+    beschließt.
 \end{enumerate}
 
 \section{Organe des Vereins}
