Mitgliedsantrag: Datenschutzerklaerung eingefuegt
Signed-off-by: Bastian Stender <basti@randomprojects.de>

--- a/Mitgliedsantrag.tex
+++ b/Mitgliedsantrag.tex
@@ -68,6 +68,10 @@ Umständen deinen Aus\-schluss als Mitglied zur Folge.}
 \minisec{Pflichtangaben}
 (Bürgerlicher) Name: \hrulefill \smallsignskip \\
 E-Mail-Adresse: \hrulefill \signskip
+\vspace*{0.2cm}
+
+Mit meiner Unterschrift erkläre ich mich mit der Datenschutzerklärung unter \\
+\url{https://wiki.freieslabor.org/wiki/Freies_Labor:Impressum} einverstanden.
 
 % Beitragsmodell
 \section*{Beitragsmodell}
